--- a/signalbox/templates/admin/signalbox/reply/change_form.html
+++ b/signalbox/templates/admin/signalbox/reply/change_form.html
@@ -57,7 +57,7 @@
     </li>
     {% if original %}
     <li class="">
-        <a href="#tabanswers" data-toggle="tab">User responses ({{original.answer_set.all.count}})</a>
+        <a href="#tabanswers" data-toggle="tab">User answers ({{original.answer_set.all.count}})</a>
     </li>
     {% endif %}
 </ul>
