admin changes; updagin jquery ui images

--- a/signalbox/templates/admin/base.html
+++ b/signalbox/templates/admin/base.html
@@ -120,9 +120,9 @@ legend a:hover {
     {% if not is_popup %}
     <!-- Header -->
 
-    {% if debug %}
+<!--    {% if debug %}
       <div class="alert alert-error"><h2>Warning: Site in debug mode. This is a security risk if this site is in active use.</h2></div>
-    {% endif %}
+    {% endif %}-->
 
 
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -195,6 +195,24 @@ legend a:hover {
 
     <!-- Content -->
     <div id="content" class="{% block coltype %}colM{% endblock %}">
+        {% block navbar %}
+
+        {% block breadcrumbs %}
+        {% endblock %}
+
+        <div class="row-fluid">
+            <div class="navbar">
+                <div class="navbar-inner">
+                    {% block pretitle %}{% endblock %}
+                    {% block content_title %}{% if title %}<a class="brand">{% render_with_template_if_exist title|lower|add:"/admin_app_name.html" title %}</a>{% endif %}{% endblock %}
+                    {% block object-tools %}{% endblock %}
+                </div>
+            </div>
+        </div>
+        {% endblock navbar %}
+
+
+
         {% block messages %}
             {% if messages %}
                 <div class="row-fluid">
@@ -210,18 +228,6 @@ legend a:hover {
                 </div>
             {% endif %}
         {% endblock messages %}
-
-        {% block navbar %}
-        <div class="row-fluid">
-            <div class="navbar">
-                <div class="navbar-inner">
-                    {% block pretitle %}{% endblock %}
-                    {% block content_title %}{% if title %}<a class="brand">{% render_with_template_if_exist title|lower|add:"/admin_app_name.html" title %}</a>{% endif %}{% endblock %}
-                    {% block object-tools %}{% endblock %}
-                </div>
-            </div>
-        </div>
-        {% endblock navbar %}
 
 
             {% block content %}{{ content }}{% endblock %}
