--- a/ask/templates/admin/signalbox/dateshift.html
+++ b/ask/templates/admin/signalbox/dateshift.html
@@ -2,9 +2,6 @@
 {% load markup humanize %}
 
 
-{% block coltype %}colMS{% endblock %}
-
-
 {% block extrahead %}
     {{block.super}}
     <style type="text/css">
@@ -18,82 +15,86 @@
 {% endblock extrahead %}
 
 
+{% block content_title %}
+<a href="{%url 'admin:signalbox_membership_change' membership.id%}"  class="brand">Date-shifting observations for: {{membership}}</a>
+{% endblock %}
+
+
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        Participant: <a class='' href='{% url "participant_overview" membership.user.id %}'>{{membership.user.username}}</a>
+        <span class="divider">/</span>
+    </li>
+    <li>
+        Member of: <a class='' href='{% url "admin:signalbox_membership_change" membership.pk %}'>
+          {{membership.study}}</a>
+          <span class="divider">/</span>
+    </li>
+    <li> Shifting randomisation and observation dates </li>
+</ul>
+{% endblock %}
+
+
 {% block content %}
-<div id="content-main">
-<h1>Date-shifting observations for: <a href="{%url 'admin:signalbox_membership_change' membership.id%}">{{membership}}</a></h1>
 
-
+<div class="row">
 
 {% if not membership.observations %}
-    <h3>No observations available to shift</h3>
+    <div class="span4">
+      <h3>No observations available to shift</h3>
+    </div>
 {% else %}
-
-
-
-    <table>
-
-
-        <tr>
-            <td width=55%>
-            <h2>Current randomisation date: {{membership.date_randomised|naturalday}}</h2>
+    <div class="span4">
+        <h4>Current randomisation date: {{membership.date_randomised|naturalday}}</h4>
                     <form action="." method="POST" >
                         {% csrf_token %}
                         {{form.as_p}}
                         <p><input type="submit" value="Shift &rarr;"></p>
                     </form>
+    </div>
+    <div class="span4">
+        <h4>Observations affected:</h4>
+        <ul>
+             {% for i in membership.observations %}
+                {% if i.timeshift_allowed %}
+                    <li>{{i.due.time}} {{i.due|naturalday}}: {{i.script}}</li>
+                {%endif%}
+             {% endfor %}
+        </ul>
 
-            </td>
-
-            <td>
-                <h4>Observations affected:</h4>
-
-                <ul>
-                     {% for i in membership.observations %}
-                        {% if not i.timeshift_allowed %}<s>{%endif%}
-                            <li>{{i.due.time}} {{i.due|naturalday}}: {{i.script}}</li>
-                        {% if not i.timeshift_allowed %}</s>{%endif%}
-                     {% endfor %}
-                </ul>
-            </td>
-
-            </tr>
-
-
-
-    </table>
+        <h4>Observations not affected:</h4>
+        <ul class="">
+             {% for i in membership.observations %}
+                {% if not i.timeshift_allowed %}
+                    <li>{{i.due.time}} {{i.due|naturalday}}: {{i.script}}</li>
+                {%endif%}
+             {% endfor %}
+        </ul>
+    </div>
 
 {% endif %}
+
+
+<div class="span4">
+   <div class="alert">
+   <h4>Information on date shifting</h4>
+      <ul>
+      <li>Only observations without participant data can be time-shifted using this form.</li>
+      <li>Complete or failed observations <em>will not be changed</em>.</li>
+      <li>Be really careful with this form, and think what the effects will be on the final data to be
+      exported before you do anything</li>
+      </ul>
+    </div>
 </div>
-{% endblock %}
 
-{% block sidebar %}
-<div id="content-related">
-
-<div class="module">
-       <h2>Information on date shifting</h2>
-
-       <ul>
-       <li>Only observations without participant data be time-shifted using this form.</li>
-       <li>Complete or failed observations will appear with a strikethough and will not be changed.</li>
-       <li>Be really careful with this form, and think what the effects will be on the final data to be
-       exported before you do anything</li>
-       <li>REMEMBER - this will not change any observations for which replies already exist.
-       HOWEVER - and this important - changing the randomisation date when some observations have data might mean that
-       estimates for how long the user had been in the study when the data was collected would be
-       inaccurate.</li>
-       </ul>
-
-       </div>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#id_new_randomised_date').datepicker({ dateFormat: "dd/mm/yy" });
+    });
+</script>
 
 </div>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#id_new_randomised_date').datepicker({ dateFormat: "dd/mm/yy" });
-        });
-    </script>
-
-
 {% endblock %}
-
 
