--- a/signalbox/templates/admin/signalbox/membership/change_form.html
+++ b/signalbox/templates/admin/signalbox/membership/change_form.html
@@ -1,24 +1,29 @@
 {% extends "signalbox:admin/change_form.html" %}
 
-{% block content %}
+
+{% block content_title %}
+<a class="brand">Editing: {{original}}</a>
+{% endblock%}
+
+{% block breadcrumbs %}
+
 {% if original %}
 <ul class="breadcrumb">
 
     <li>
-        <a class='' href='{% url "participant_overview" original.user.id %}'>{{original.user.username}}</a>
+        Participant: <a class='' href='{% url "participant_overview" original.user.id %}'>{{original.user.username}}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        {{original.study}}
+        Membership of: <a href="{% url "admin:signalbox_study_change" original.study.pk %}">{{original.study}}</a>
     </li>
 
 
 </ul>
 {% endif %}
 
-{{block.super}}
-
 {% endblock%}
+
 
 
 
@@ -32,12 +37,94 @@
     <a class='btn' href='{% url 'randomise_membership' object_id %}'>Randomise this user now</a>
     {% endif %}
 
+{% endblock %}
 
+
+{% block content %}
+
+{% with original.observation_set.all.count as hasobs %}
+<ul class="nav nav-tabs {% if hasobs %}active{% endif %}
+" id="usertabs">
     {% if original %}
-    <a class="btn" href= "{% url 'participant_overview' original.user.id %}">User details</a>
-
-    <a class='btn' href='{% url 'dateshift_membership' object_id %}'>Shift observation times</a>
-
+    <li class="active">
+        <a href="#tabobs" data-toggle="tab">Observations</a>
+    </li>
     {% endif %}
+    <li class="{%if not original %}active{% else %}{% if not hasobs %}active{%endif%} {% endif %}">
+        <a href="#tabmain" data-toggle="tab">Edit details</a>
+    </li>
 
+</ul>
+
+
+<div class="tab-content">
+
+<div class="tab-pane {% if hasobs %}active{% endif %}" id="tabobs">
+        {% if original %}
+        <a class='btn' href='{% url 'dateshift_membership' object_id %}'>Shift observation times</a>
+        <hr>
+        {% endif %}
+
+        <p>Observations created as part of this membership:</p>
+        <table class="table">
+
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Due</th>
+                    <th>Label</th>
+                    <th>Type</th>
+                    <th>Status</th>
+                    <th>Attempts</th>
+                    <th>No. replies</th>
+                    <th width=25% colspan=2>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in original.observation_set.all %}
+                <tr>
+                    <td><a class="btn btn-mini" href="{% url 'admin:signalbox_observation_change' i.id %}">Edit</a></td>
+                    <td >{{i.due}}</td>
+                    <td>{{i.label}}</td>
+                    <td>{{i.script_type}}</td>
+                    <td><span class="badge
+                        {% if i.status == 1 %}badge-success{% else %}badge{% endif %}
+                        ">{{i.status_string}}</span></td>
+                    <td>{{i.attempt_count}}</td>
+                    <td>
+                        {{i.reply_set.count}}
+                    </td>
+
+                    <td>
+                        {% if i.can_add_answers %}
+                        <a class="btn  btn-mini btn-primary" href="{% url 'start_double_entry' i.token %}">Add data</a>
+                        {% endif %}
+
+                        {% if i.script_type.sends_message_to_user %}
+                        <a class='btn btn-mini {% if i.attempt_count == 0 %}btn-danger{%else%}btn-warning{% endif %}' href='{% url 'resend_observation_signal' i.id %}'>
+                            {% if i.attempt_count == 0 %}
+                            <i class="icon-share-alt"></i>Send early
+                            {% else %}
+                            <i class="icon-refresh"></i> Resend
+                            {% endif %}
+
+                        </a>
+                        {% endif %}
+
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+</div>
+
+<div class="tab-pane
+{% if not hasobs %}active{%endif%}
+" id="tabmain">
+{{block.super}}
+</div>
+
+</div>
+
+{% endwith %}
 {% endblock %}
