--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -41,7 +41,7 @@ a:hover {
 }
 
 a:visited {
-  color: #a6d1ff;
+  color: #226aff;
 }
 
 table {
@@ -78,7 +78,7 @@ ul.posts {
 
 .site {
   font-size: 110%;
-  text-align: justify;
+  text-align: left;
   width: 40em;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
