--- a/signalbox/templates/error.html
+++ b/signalbox/templates/error.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{% block title %}Signalbox: Online Research{% endblock title %}</title>
-    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen,print">
+{% extends "base.html" %}
+{% load markup %}
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% block base_content %}
+<h1> An error occured</h1>
+<div class="alert">
+{{exception}}
+</div>
+{% endblock %}
 
-  </head>
-    <body>
-
-        {% block content %}
-        {{exception}}
-        {% endblock %}
-
-    </body>
-</html>
