Fix bug whereby count of signed up users was wrong.

--- a/signalbox/templates/admin/signalbox/study/change_form.html
+++ b/signalbox/templates/admin/signalbox/study/change_form.html
@@ -58,7 +58,7 @@ Study Dashboard: {{original.name}}
                         <tr>
                             <th>Total</th>
                             <th>
-                                {{original.studycondition_set.count}}</th><td>
+                                {{original.membership_set.count}}</th><td>
                             </th>
                         </tr>
                         <tr>
