--- a/ask/templates/asker_page.html
+++ b/ask/templates/asker_page.html
@@ -17,7 +17,7 @@
 
 <div class="row">
 {% if page.asker.step_navigation %}
-    <div class="span12">
+    <div class="span{% if page.asker.width %}{{page.asker.width}}{% else %}12{% endif %}">
 
         <!-- <hr> -->
         <a class=" pull-right {% if not redbutton %}disabled {%else%}btn-danger{% endif %} btn" {% if redbutton  %}onclick="javascript:$('#questionnaire_form').attr('action', '?finish=1'); $('#questionnaire_form').submit();"{% endif%} href="#">Save and Finish
@@ -46,7 +46,7 @@
     </div>
 {% endif %}
 {% if page.asker.show_progress %}
-    <div class="span12">
+    <div class="span{% if page.asker.width %}{{page.asker.width}}{% else %}12{% endif %}">
         <p> Page {{ page.progress_pages.0 }} of {{ page.progress_pages.1 }}
     </p>
 </div>
@@ -65,8 +65,8 @@
 
 
 {% block base_content %}
-
-
+<div class="row">
+    <div class="span{% if page.asker.width %}{{page.asker.width}}{% else %}12{% endif %}">
     <form class="form" id="questionnaire_form" action="." method="POST" enctype="multipart/form-data">
 
     {% csrf_token %}
@@ -119,6 +119,9 @@
 {{page.javascript}}
 </script>
 {% endif %}
+
+    </div>
+</div>
 {% endblock %}
 
 
